# h-button-driver

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.history/src/: main_20230208131145.rs  main_20230208171824.rs
src/: main.rs
src/app/: mod.rs  poller.rs
src/ble/: manager.rs  mod.rs  notifications.rs
src/core/: mod.rs
src/sound/: linux.rs  macos.rs  mod.rs  sound_controller.rs  windows.rs
src/tray/: mod.rs  tray_menu.rs
