[package]
name = "h-button-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11.0", features = ["serde"] }
rand = "0.8.5"
pretty_env_logger = "0.5.0"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0.92"
futures = "0.3.26"
uuid = "1.3.0"
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }

[target.'cfg(target_os="macos")'.dependencies]
coreaudio-rs = "0.11.2"

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.7.0"
